--- a/trunk/MvvmTest/MvvmTest.csproj
+++ b/trunk/MvvmTest/MvvmTest.csproj
@@ -71,8 +71,9 @@
     <Compile Include="ViewModels\Core\PropertyBehaviors\ValidationBehaviorTest.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\TypeDescriptorServiceTests.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\VMPropertyDescriptorTests.cs" />
-    <Compile Include="ViewModels\Core\Validation\ViewModelValidatorHolderTests.cs" />
+    <Compile Include="ViewModels\- Legacy -\ViewModelValidatorHolderTests.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBaseTests.cs" />
+    <Compile Include="ViewModels\Core\Validation\InstancePathTests.cs" />
     <Compile Include="ViewModels\IntegrationTests\ChangeNotificationTest.cs" />
     <Compile Include="ViewModels\IntegrationTests\CollectionPropertyTest.cs" />
     <Compile Include="ViewModels\IntegrationTests\CollectionValidationTest.cs" />
