--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -110,6 +110,12 @@
     <Compile Include="ViewModels\Core\Common\ChangeArgs.cs" />
     <Compile Include="ViewModels\Core\Common\InstancePath.cs" />
     <Compile Include="ViewModels\Core\Common\ValidationContext.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\IInitializationPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyBehaviorInitializationContext.cs" />
+    <Compile Include="ViewModels\Core\Validation\PropertyBehaviors\IValidationStatePropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\Validation\PropertyBehaviors\PropertyValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\Validation\ValidationContext.cs" />
     <Compile Include="ViewModels\Core\Validation\ValidationError.cs" />
     <Compile Include="ViewModels\Core\Common\VMPropertyPath.cs" />
     <Compile Include="ViewModels\Core\IBehaviorConfigurationDictionaryProvider.cs" />
@@ -118,24 +124,25 @@
     <Compile Include="ViewModels\Core\ISupportsValidation.cs" />
     <Compile Include="ViewModels\Core\ItemCreationController.cs" />
     <Compile Include="ViewModels\Core\IValidationBuilder.cs" />
-    <Compile Include="ViewModels\Core\Kernel\IPropertyBehaviorContext.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\IPropertyBehaviorContext.cs" />
     <Compile Include="ViewModels\Core\Kernel\VMKernel.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\CollectionFactoryBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\CollectionPopulatorBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\CollectionValidationBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\DefaultManualUpdateBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\DelegateCommandBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\IMutabilityCheckerBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\IViewModelFactoryBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropagateVMContextBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\ViewModelFactoryBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\ViewModelPropertyInitializerBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\CollectionFactoryBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\CollectionPopulatorBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\CollectionValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\DefaultManualUpdateBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\DelegateCommandBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IMutabilityCheckerBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IViewModelFactoryBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\PropagateVMContextBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\ViewModelFactoryBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\ViewModelPropertyInitializerBehavior.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\SimplePropertyDescriptor.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\TypeDescriptorPropertyBehavior.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\TypeDescriptorService.cs" />
     <Compile Include="ViewModels\Core\ValidationEventArgs.cs" />
     <Compile Include="ViewModels\Core\Validation\ValidationArgs.cs" />
     <Compile Include="ViewModels\Core\Validation\ValidationErrorCollection.cs" />
+    <Compile Include="ViewModels\Core\Validation\ValidationState.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelBehaviors\ViewModelValidationBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelValidator.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelValidationArgs.cs" />
@@ -175,21 +182,21 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Core\Behaviors\IBehaviorContext.cs" />
     <Compile Include="ViewModels\ICanInitializeFrom.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\AllowInvalidDisplayValuesBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\DisplayValueValidationBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\CacheValueBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\CalculatedPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\DynamicFieldGroups.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\InstancePropertyBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\IAccessPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\IManuelUpdateBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\IHandlePropertyChangedBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\IHandlePropertyChangingBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\IValidationBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\MappedPropertyBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\PropertyChangedBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\DisplayValueAccessorBehavior.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\ValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\AllowInvalidDisplayValuesBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\DisplayValueValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\CacheValueBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\CalculatedPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\DynamicFieldGroups.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\InstancePropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IAccessPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IManuelUpdateBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IHandlePropertyChangedBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IHandlePropertyChangingBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\IValidationBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\MappedPropertyBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\PropertyChangedBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\DisplayValueAccessorBehavior.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\Legacy\ValidationBehavior.cs" />
     <Compile Include="ViewModels\Core\TypeDescriptor\VMPropertyDescriptor.cs" />
     <Compile Include="ViewModels\Core\ChangeValueRequest.cs" />
     <Compile Include="ViewModels\IVMValueConverter.cs" />
@@ -234,7 +241,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\- No Namespace -\Validation\" />
-    <Folder Include="ViewModels\Core\Validation\PropertyBehaviors\" />
     <Folder Include="Views\TestDoubles\" />
   </ItemGroup>
   <ItemGroup>
